# dotfiles

./: .gitignore  .zshrc  AGENTS.md  README.md  activate.sh  config-root.yaml  config.yaml  init.sh  pyproject.toml  rename_dotman.sh  replace_dotmanage.py  repo.toml
Iterm2/: com.googlecode.iterm2.plist
docs/: avahi.md  bootstrap.md  dotdrop-bootstrap.md  dotdrop-state-marker-actions.md  dotdrop-template-update.md  dotdrop-vs-chezmoi-vs-ansible.md  greetd.md  gtk-theme-settings.md  hyprland-experiment.md  install-marker-packages.md  install-probe-targets.md  json-transform.md  kv-transform.md  mango-experiment.md  niri-autolock.md  niri-event-stream-rules.md  niri-kwallet-startup-unlock.md  niri-post-startup-auth-prompts.md  niri-session-environment.md  noctalia-pinned-window-widget.md  plist-transform.md  scheduled-jobs.md  secret-service.md  single-upgrade-command.md  steam-ime-workaround.md  sunshine-prep-cosmic.md  sunshine-prep-hypr.md  sunshine-prep-mango.md  sunshine-prep-niri.md  sunshine-prep-sway.md  sway-experiment.md  switch-desktop.md  toml-transform.md  transform-cli-interface.md  transform-cli-usage.md  transform-engine-interface.md  transformer-script-interface.md  user-systemd-service-actions.md  wayvnc.md  xml-transform.md
dotfiles/: env.core.sh  gitconfig  npmrc  profile  profile.bootstrap.sh  zimrc  zprofile  zshenv  zshrc
git/: .gitconfig
groups/: agent-external-tools.toml  core.toml
kde/: run-command.json
scripts/: __init__.py  check_core_env.sh  dotdrop_template_update.py  dotman.py  dotman.sh.archived  dotmanage.py  dotmanage.sh  (+27 more)
(+245 files in other folders)
