[project]
name = "dotfiles-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "tomlkit>=0.13,<1",
  "pyyaml>=6,<7",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--basetemp=/tmp/pytest-dotfiles"]
testpaths = ["tests"]
