[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotfiles-tools"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "dotdrop",
  "tomlkit>=0.13,<1",
  "pyyaml>=6,<7",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--basetemp=/tmp/pytest-dotfiles"]
testpaths = ["tests"]
