[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dotfiles-tools"
version = "0.1.0"
description = "Shared helper scripts for the dotfiles repo"
requires-python = ">=3.11"
dependencies = [
  "PyGObject>=3.54,<4",
  "tomlkit>=0.13,<1",
]

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["scripts"]

[dependency-groups]
dev = [
    "pygobject-stubs>=2.17.0",
    "pytest>=9.0.2",
]

[tool.pytest]
minversion = "9.0"
addopts = ["-ra", "--basetemp=/tmp/pytest-dotfiles"]
testpaths = ["tests"]
